[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sounds/end.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scenes/EndScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/AnimatedPaper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/endscreen.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 1280, 720 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 1280, 720 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 720, 1280, 720 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 1280, 720, 1280, 720 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="EndScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedPaper" parent="." instance=ExtResource( 3 )]
position = Vector2( -640, -360 )

[node name="EndSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 50.4537 )
scale = Vector2( 0.88959, 0.88959 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="EndMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -5.0
